k8s/proxy-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: proxy
  name: proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: proxy
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.22.0 (955b78124)
      creationTimestamp: null
      labels:
        io.kompose.network/http-net: 'true'
        io.kompose.service: proxy
    spec:
      containers:
        - env:
            - name: CERTPROVIDER
            - name: DNSPLUGIN
            - name: DUCKDNSTOKEN
            - name: EMAIL
            - name: EXTRA_DOMAINS
            - name: MAXMINDDB_LICENSE_KEY
            - name: ONLY_SUBDOMAINS
              value: 'false'
            - name: PGID
              value: '1000'
            - name: PROPAGATION
            - name: PUID
              value: '1000'
            - name: STAGING
              value: 'true'
            - name: SUBDOMAINS
              value: www,
            - name: TZ
              value: America/New_york
            - name: URL
              value: localhost
            - name: VALIDATION
              value: http
          image: oada/support-proxy:edge
          name: proxy
          ports:
            - containerPort: 443
            - containerPort: 80
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
          volumeMounts:
            - mountPath: /config/keys/letsencrypt
              name: tls
              readOnly: true
      restartPolicy: Always
      volumes:
        - name: tls
          secret:
            secretName: self-signed
            items:
              - key: tls.crt
                path: fullchain.pem
              - key: tls.key
                path: privkey.pem
