k8s/rev-graph-update.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: rev-graph-update
  name: rev-graph-update
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rev-graph-update
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: rev-graph-update
    spec:
      containers:
        - env:
            - name: CONFIG
              value: /oada.config.js
            - name: DEBUG
              value: '*:error,*:warn,*:info'
            - name: DOMAIN
              value: localhost
            - name: NODE_ENV
              value: production
            - name: NODE_TLS_REJECT_UNAUTHORIZED
              value: '0'
            - name: PINO_TRANSPORT
              value: yarn g:pretty -clti pid,hostname
          image: oada/rev-graph-update:edge
          securityContext:
            #runAsNonRoot: true
            # run as user node (uid 1000)
            runAsUser: 1000
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
          name: rev-graph-update
          volumeMounts:
            - mountPath: /tmp
              name: tmp
      volumes:
        - name: tmp
          emptyDir:
            medium: Memory
      restartPolicy: Always
