k8s/http-handler.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: http-handler
  labels:
    app: http
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    app: http
---
# TODO: Why do I get an error with just `path: /`?
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: websocket-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - pathType: Exact
            backend:
              service:
                name: http-handler
                port:
                  name: http
            path: /$
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http-ingress
spec:
  rules:
    - http:
        paths:
          - path: /resources
            pathType: Prefix
            backend:
              service:
                name: http-handler
                port:
                  name: http
          - path: /bookmarks
            pathType: Prefix
            backend:
              service:
                name: http-handler
                port:
                  name: http
          - path: /shares
            pathType: Prefix
            backend:
              service:
                name: http-handler
                port:
                  name: http
          - path: /users
            pathType: Prefix
            backend:
              service:
                name: http-handler
                port:
                  name: http
          - path: /authorizations
            pathType: Prefix
            backend:
              service:
                name: http-handler
                port:
                  name: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: http-handler
  labels:
    app: http
spec:
  replicas: 1
  selector:
    matchLabels:
      app: http
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: http
    spec:
      containers:
        - env:
            - name: CONFIG
              value: /oada.config.js
            - name: DEBUG
              value: '*:error,*:warn,*:info'
            - name: DOMAIN
              value: localhost
            - name: NODE_ENV
              value: production
            - name: NODE_TLS_REJECT_UNAUTHORIZED
              value: '0'
            - name: PINO_TRANSPORT
              value: yarn g:pretty -clti pid,hostname
            - name: arangodb__ensureDefaults
              value: 'true'
          image: oada/http-handler:edge
          securityContext:
            #runAsNonRoot: true
            # run as user node (uid 1000)
            runAsUser: 1000
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
          name: http-handler
          ports:
            - containerPort: 8080
          volumeMounts:
            - mountPath: /oada/binary
              name: binary-data
            - mountPath: /tmp
              name: tmp
      volumes:
        - name: binary-data
        - name: tmp
          emptyDir:
            medium: Memory
      restartPolicy: Always
