k8s/well-known.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: well-known
  name: well-known
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    app: well-known
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: well-known-ingress
  annotations:
    #nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /.well-known/
            pathType: Prefix
            backend:
              service:
                name: well-known
                port:
                  name: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: well-known
  name: well-known
spec:
  replicas: 1
  selector:
    matchLabels:
      app: well-known
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: well-known
    spec:
      containers:
        - env:
            - name: CONFIG
              value: /oada.config.js
            - name: DEBUG
              value: '*:error,*:warn,*:info'
            - name: DOMAIN
              value: localhost
            - name: NODE_ENV
              value: production
            - name: NODE_TLS_REJECT_UNAUTHORIZED
              value: '0'
            - name: PINO_TRANSPORT
              value: yarn g:pretty -clti pid,hostname
          image: oada/well-known:edge
          securityContext:
            runAsNonRoot: true
            # run as user node (uid 1000)
            runAsUser: 1000
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
          name: well-known
          ports:
            - containerPort: 8080
          volumeMounts:
            - mountPath: /tmp
              name: tmp
      volumes:
        - name: tmp
          emptyDir:
            medium: Memory
      restartPolicy: Always
